<resources>
    <string name="app_name">app.member</string>
    <string name="member_new_member">新增员工</string>
    <string name="member_postion_select_position">请选择对应的岗位</string>
    <string name="member_postion_next">下一步</string>
    <string name="member_info_setting">设置员工基本信息</string>
    <string name="member_info_name">姓名</string>
    <string name="member_info_name_label">请输入您的真实姓名,方便同事联系</string>
    <string name="member_info_phone">手机</string>
    <string name="member_info_phone_label">请输入您的手机号码</string>
    <string name="member_info_phone_error_label">手机号码输入有误</string>
    <string name="member_account_setting">设置员工登录帐号和密码</string>
    <string name="member_account_name">用户名</string>
    <string name="member_account_name_label">登录千米云电商系统的帐号</string>
    <string name="member_account_pw">密码</string>
    <string name="member_account_pw_label">请输入密码</string>
    <string name="member_account_submit">确认提交</string>
    <string name="member_addsuccess_label">新增成功,您还可以</string>
    <string name="member_addsuccess_go_on">继续添加其他员工</string>
    <string name="member_addsuccess_login">登录千米云管家</string>
    <string name="member_detail_department">部门</string>
    <string name="member_detail_role">岗位</string>
    <string name="member_detail_cellphone">手机</string>
    <string name="member_detail_email">邮箱</string>
    <string name="member_list_title">员工</string>
    <string name="member_list_search_hint">输入姓名，快速查找</string>
    <string name="message_list_title">消息</string>
    <string name="member_select_title">消息</string>
    <string name="member_select_tab_employee">同事</string>
    <string name="member_select_tab_point">网点</string>
    <string name="member_select_input_hint">选择发送对象</string>
    <string name="click_right_tip">点击右边‘+’选择收件人</string>

    <string name="read_sign">标记为已读</string>
</resources>
